Begin adding print css

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -30,6 +30,10 @@ $light-red: #FA3E3B;
     margin-top: 20px;
   }
 
+  h4 {
+    margin-bottom: 15px;
+  }
+
   section {
     background-color: $background-darktan;
     padding: 20px;
