--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -83,6 +83,7 @@ $light-red: #FA3E3B;
 .column {
   display: table-cell;
   padding: 10px;
+  width: calc(100% / 3);
 
   img {
     margin-bottom: 10px;
