--- a/app/views/public_relations/country_status.html.erb
+++ b/app/views/public_relations/country_status.html.erb
@@ -3,7 +3,8 @@
 
   <p>
     Current Round is <%= @roundNum %>.<br />
-    Total PR for Round <%= @roundNum -1 %> is: <%= @roundTotal %>
+    Give <%= @country %> <%= @current_income%> Credits during round <%= @roundNum %> for use in round <%= @roundNum+1%>.<br />
+    PR Sum for Round <%= @roundNum -1 %> is: <%= @roundTotal %>
   </p>
 
   <h3>PR Amounts by Round</h3>
