--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -96,10 +96,20 @@ $light-red: #FA3E3B;
     list-style-type: none;
     padding: 0px;
   }
+
+  li:after {
+    border-bottom: 1px solid #2f2f2f;
+    content: '';
+    display: block;
+    height: 4px;
+    margin: 0 auto;
+    width: 100px;
+  }
+
+  li:last-child:after {
+    border-bottom: 0;
+  }
 }
-
-
-
 
 /* =====================================
                 COUNTRIES
