--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -94,8 +94,8 @@
         </div>
 
         <div id="activity-container">
-          <img id="activity-image" src="/assets/activity.png" />
-          <h3>Military Activity</h3>
+          <img id="activity-image" src="/assets/vatican.png" />
+          <h3 id="Vatican">Vatican Activity</h3>
           <p>{{activity}}</p>
         </div>
       </div>
