update a bit of css and add public news controls

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -47,7 +47,7 @@ $light-red: #FA3E3B;
 
   #mgs-logo {
     display: block;
-    margin: 30px auto 50px;
+    margin: 0px auto 30px;
   }
 
   .twitter {
@@ -87,7 +87,7 @@ $light-red: #FA3E3B;
 
 #countries-container {
   background: $background-darktan;
-  padding: 20px;
+  padding: 0px 20px;
 
   tr {
     border-bottom: 0;
@@ -120,7 +120,7 @@ $light-red: #FA3E3B;
 
 #terror-container {
   background: $background-green;
-  margin: 40px -40px -20px 80px;
+  margin: 0px -40px -20px 80px;
   padding: 20px 20px 50px 20px;
   text-align: center;
 }
