--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -87,7 +87,7 @@ $light-red: #FA3E3B;
 
 #countries-container {
   background: $background-darktan;
-  padding: 0px 20px;
+  padding: 5px 20px;
 
   tr {
     border-bottom: 0;
@@ -145,12 +145,9 @@ $light-red: #FA3E3B;
    ===================================== */
 
 .news-container {
-  display: none;
-  margin-bottom: 40px;
-
-  &.active {
-    display: block;
-  }
+  margin-bottom: 30px;
+  border-bottom: thin solid #000000;
+  display: block;
 
   .date {
     font-size: 1.6rem;
@@ -162,6 +159,10 @@ $light-red: #FA3E3B;
     display: block;
     max-height: 300px;
     width: 100%;
+  }
+
+  p{
+    margin: 5px auto
   }
 
   a {
