--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -94,9 +94,9 @@
         </div>
 
         <div id="activity-container">
-          <img id="activity-image" src="/assets/vatican.png" />
-          <h3 id="Vatican">Vatican Activity</h3>
-          <p>{{activity}}</p>
+          <img id="activity-image" src="/assets/vatican.png" /></img>
+          <h3 class="Vatican">Vatican Activity</h3>
+          <p class="Vatican">{{activity}}</p>
         </div>
       </div>
     </div>
