last second checks

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -96,6 +96,7 @@
         <div id="activity-container">
           <img id="activity-image" src="/assets/vatican.png" /></img>
           <h3 class="Vatican">Vatican Activity</h3>
+          <h5 class="Vatican">Ego sum veritias via</h5>
           <p class="Vatican">{{activity}}</p>
         </div>
       </div>
