--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -228,7 +228,7 @@ $light-red: #FA3E3B;
 }
 
 #activity-container {
-  margin-top: 50px;
+  margin-top: 30px;
   p {
     margin-top: 5px;
   }
@@ -240,6 +240,9 @@ $light-red: #FA3E3B;
   line-height: 2.4rem;
   text-align: center;
 
+  p {
+    margin:0px auto;
+  }
   #rioters-count {
     margin: 20px auto;
     text-align: left;
