Remove left column, make middle column into left column.

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -4,10 +4,9 @@
   </div>
 
   <div class="columns">
-    <div class="left-column">
-    </div>
 
-    <div class="centre-column">
+    <!-- News Column -->
+    <div class="left-column">
       <div id="round-container">
         <h2 ng-if="!paused">
           <timer countdown="roundDuration" max-time-unit="'minute'" interval="1000">{{mminutes}}:{{sseconds}}</timer>
