--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -41,28 +41,8 @@ $light-red: #FA3E3B;
 
 .left-column {
   display: table-cell;
-  padding-right: 30px;
+  padding: 0px 30px;
   vertical-align: top;
-  width: 25%;
-
-  #mgs-logo {
-    display: block;
-    margin: 0px auto 30px;
-  }
-
-  .twitter {
-    font-size: 1.2rem;
-    line-height: 2.0rem;
-    margin-top: -18px;
-    margin-left: 20px;
-  }
-}
-
-.centre-column {
-  display: table-cell;
-  padding-right: 30px;
-  vertical-align: top;
-  width: 50%;
 
   #round-container {
     text-align: center;
@@ -74,10 +54,10 @@ $light-red: #FA3E3B;
 }
 
 .right-column {
-  background-color: $background-seafoam;
   display: table-cell;
+  text-align: center;
   vertical-align: top;
-  width: 25%;
+  width: 200px;
 }
 
 .column {
@@ -111,36 +91,36 @@ $light-red: #FA3E3B;
   }
 }
 
+
 /* =====================================
                 COUNTRIES
    ===================================== */
 
-#countries-container {
-  background: $background-darktan;
-  padding: 5px 20px;
+#countries-ticker {
+  background: #000;
+  bottom: 0;
+  list-style-type: none;
+  position: fixed;
+  width: 100%;
 
-  tr {
-    border-bottom: 0;
-  }
-
-  td {
-    padding: 5px;
-    text-align: center;
-
-    &:first-child {
-      text-align: left;
-    }
-  }
-
-  .arrow {
-    background: url('/assets/arrows.png') 0px 0px no-repeat;
+  li {
+    color: #FFF;
     display: inline-block;
-    height: 20px;
-    width: 20px;
-
-    &.up   { background-position: 5px   7px; }
-    &.down { background-position: 5px -17px; }
+    font-size: 3.4rem;
+    margin: 5px 25px;
   }
+}
+
+.arrow {
+  background: url('/assets/arrows.png') 0px 0px no-repeat;
+  display: inline-block;
+  height: 20px;
+  margin-top: 5px;
+  vertical-align: top;
+  width: 20px;
+
+  &.up   { background-position: 5px   7px; }
+  &.down { background-position: 5px -17px; }
 }
 
 
@@ -149,26 +129,26 @@ $light-red: #FA3E3B;
    ===================================== */
 
 #terror-container {
-  background: $background-green;
-  margin: 0px -40px -20px 80px;
-  padding: 20px 20px 50px 20px;
-  text-align: center;
-}
-
-.progress-wrapper {
-  margin: 20px auto;
+  background-color: #FFF;
+  display: inline-block;
+  height: 500px;
+  margin: 10px auto;
   position: relative;
-
-  .progress-legend {
-    color: $red;
-    font-size: 3.0rem;
-    line-height: 3.8rem;
-    position: absolute;
-    top: Calc(50% - 30px);
-    width: 100%;
-    z-index: 10;
-  }
+  width: 167px;
 }
+
+#terror-container img {
+  position: relative;
+}
+
+#terror-percentage {
+  background: #78AFA9;
+  bottom: 0px;
+  display: block;
+  position: absolute;
+  width: 100%;
+}
+
 
 /* =====================================
                   NEWS
@@ -177,7 +157,6 @@ $light-red: #FA3E3B;
 .news-container {
   margin-bottom: 30px;
   border-bottom: thin solid #000000;
-  display: block;
 
   .date {
     font-size: 1.6rem;
@@ -203,52 +182,5 @@ $light-red: #FA3E3B;
     margin-top: 10px;
     text-decoration: none;
     text-transform: uppercase;
-  }
-}
-
-/* =====================================
-                  RIOTS
-   ===================================== */
-
-#riot-top {
-  background-color: $background;
-  height: 175px;
-  width: 100%;
-}
-
-#riot-image,
-#activity-image {
-  display: block;
-  margin: 0 auto;
-}
-
-#riot-image {
-  margin-top: -150px;
-}
-
-#activity-container {
-  margin-top: 30px;
-  p {
-    margin-top: 5px;
-  }
-}
-
-#rioters-container {
-  padding: 20px;
-  font-size: 1.6rem;
-  line-height: 2.4rem;
-  text-align: center;
-
-  p {
-    margin:0px auto;
-  }
-  #rioters-count {
-    margin: 20px auto;
-    text-align: left;
-    width: 75%;
-
-    img {
-      margin: 3px 0px;
-    }
   }
 }
