--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -13,6 +13,24 @@ $light-red: #FA3E3B;
 
 
 /* =====================================
+           SIZING FOR PROJECTOR
+   ===================================== */
+
+#dashboard {
+  font-size: 3rem;
+  line-height: 3.8rem;
+
+  h3 {
+    font-size: 3.6rem;
+    line-height: 4.4rem;
+  }
+}
+
+
+
+
+
+/* =====================================
                 GENERAL
    ===================================== */
 
