--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -54,8 +54,13 @@ $light-red: #FA3E3B;
   line-height: 3.8rem;
 
   h3 {
-    font-size: 3.6rem;
-    line-height: 4.4rem;
+    font-size: 4rem;
+    line-height: 4.8rem;
+  }
+
+  h4 {
+    font-size: 3.2rem;
+    line-height: 4rem;
   }
 }
 
@@ -180,12 +185,12 @@ $light-red: #FA3E3B;
   .country {
     color: #FFF;
     display: inline-block;
-    font-size: 3.4rem;
+    font-size: 4rem;
     margin: 7px 1.6%;
   }
 
   .glyphicon {
-    font-size: 3rem;
+    font-size: 3.4rem;
   }
 
   .glyphicon-chevron-down {
@@ -253,10 +258,14 @@ $light-red: #FA3E3B;
   margin-bottom: 30px;
   border-bottom: thin solid #000000;
 
-  .date {
-    font-size: 1.6rem;
+  h4 {
     font-weight: bold;
-    line-height: 2.4rem;
+  }
+
+  .date {
+    font-size: 2.4rem;
+    font-style: italic;
+    line-height: 3.2rem;
   }
 
   img {
@@ -264,7 +273,9 @@ $light-red: #FA3E3B;
     max-height: 300px;
   }
 
-  p{
+  p {
+    font-size: 2.8rem;
+    line-height: 3.6rem;
     margin: 5px auto
   }
 
