Add "stagnation" icon for Country Income Ticker.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -298,8 +298,9 @@ textarea {
 .glyphicon-play:before          { content: "\e072"; }
 .glyphicon-pause:before         { content: "\e073"; }
 .glyphicon-stop:before          { content: "\e074"; }
-.glyphicon-chevron-up:before    { content: "\e113"; }
-.glyphicon-chevron-down:before  { content: "\e114"; }
+.glyphicon-chevron-up:before    { content: "\e133"; }
+.glyphicon-chevron-down:before  { content: "\e134"; }
+.glyphicon-minus:before         { content: "\e082"; }
 
 /* =====================================
               TABLE DEFAULTS
