--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -200,6 +200,10 @@ $light-red: #FA3E3B;
   .glyphicon-chevron-up {
     color: #6CC644;
   }
+
+  .glyphicon-minus {
+    color: #D5D506;
+  }
 }
 
 /* =====================================
