--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -49,23 +49,23 @@
         <div ng-repeat="country in countries" class="country">
           <span>{{country.name}}</span>
           <span>{{country.amount || 0}}</span>
-          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change <= 0, 'glyphicon-chevron-up': country.change > 0 }"></i>
+          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change < 0, 'glyphicon-chevron-up': country.change > 0, 'glyphicon-minus': country.change == 0}"></i>
         </div>
       </li>
       <!-- Duplicate because it makes the animation smoother -->
       <li>
         <div ng-repeat="country in countries" class="country">
           <span>{{country.name}}</span>
-          <span>{{country.amount || 0}}</span>
-          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change <= 0, 'glyphicon-chevron-up': country.change > 0 }"></i>
+          <span>{{country.amount}}</span>
+          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change < 0, 'glyphicon-chevron-up': country.change > 0, 'glyphicon-minus': country.change == 0}"></i>
         </div>
       </li>
       <!-- Triplicate because it makes the animation smoother -->
       <li>
         <div ng-repeat="country in countries" class="country">
           <span>{{country.name}}</span>
-          <span>{{country.amount || 0}}</span>
-          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change <= 0, 'glyphicon-chevron-up': country.change > 0 }"></i>
+          <span>{{country.amount}}</span>
+          <i class="glyphicon" ng-class="{'glyphicon-chevron-down': country.change < 0, 'glyphicon-chevron-up': country.change > 0, 'glyphicon-minus': country.change == 0}"></i>
         </div>
       </li>
     </ul>
