Rename classes for legibility.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -313,12 +313,12 @@ textarea {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.glyphicon-play:before          { content: "\e072"; }
-.glyphicon-pause:before         { content: "\e073"; }
-.glyphicon-stop:before          { content: "\e074"; }
-.glyphicon-chevron-up:before    { content: "\e133"; }
-.glyphicon-chevron-down:before  { content: "\e134"; }
-.glyphicon-minus:before         { content: "\e082"; }
+.glyphicon-play:before      { content: "\e072"; }
+.glyphicon-pause:before     { content: "\e073"; }
+.glyphicon-stop:before      { content: "\e074"; }
+.glyphicon-increase:before  { content: "\e133"; }
+.glyphicon-decrease:before  { content: "\e134"; }
+.glyphicon-stagnate:before  { content: "\e082"; }
 
 /* =====================================
               TABLE DEFAULTS
